Add ability to create new excuses if logged in

--- a/sinatra-mvc-skeleton/app/views/excuses/index.erb
+++ b/sinatra-mvc-skeleton/app/views/excuses/index.erb
@@ -1,8 +1,13 @@
 <section>
   <article>
+    <h1>Excuses</h1>
+    <% if current_user %>
+      <a href="/excuses/new">Add a new excuse</a>
+    <% end %>
     <ul>
       <% @excuses.each do |excuse| %>
         <li><%= excuse.body %></li>
+        <a href="#">View</a>
       <% end %>
     </ul>
   </article>
