--- a/sinatra-mvc-skeleton/app/views/layout.erb
+++ b/sinatra-mvc-skeleton/app/views/layout.erb
@@ -24,7 +24,7 @@
     <a href="/"><img src="/img/zenchinese.png" class="logo"></a>
     <div id="login-toolbar">
       <% if current_user %>
-        <a href="#"><%= current_user.first_name %> <%= current_user.last_name %></a>
+        <a href="/users/<%= current_user.id %>"><%= current_user.first_name %> <%= current_user.last_name %></a>
         <a href="/logout">Logout</a>
       <% else %>
         <a href="/users/new">Create Account</a>
