Add sound effects and fix logic for ratings

--- a/sinatra-mvc-skeleton/app/views/comments/edit.erb
+++ b/sinatra-mvc-skeleton/app/views/comments/edit.erb
@@ -1,10 +1,12 @@
-<section>
-  <h1>Update you comment</h1>
+<section class="container">
+  <h1 class="text-center header">Update you comment</h1>
   <%= erb :"partials/_create_account_errors", locals: { errors: @errors } %>
-  <form method="post" action="/excuses/<%= @excuse.id %>/comments/<%= @comment.id %>">
-    <input type="hidden" name="_method" value="put">
-    <textarea type="text" name="comment_body"><%= @comment.body %></textarea>
-    <br>
-    <input type="submit" value="Comment">
+  <form role="form" method="post" action="/excuses/<%= @excuse.id %>/comments/<%= @comment.id %>">
+    <div class = "form-group">
+      <input type="hidden" name="_method" value="put">
+      <textarea  class="form-control" rows = "3" type="text" name="comment_body"><%= @comment.body %></textarea>
+      <br>
+      <input class="button" type="submit" value="Comment">
+    </div>
   </form>
 </section>
