--- a/sinatra-mvc-skeleton/app/views/welcome.erb
+++ b/sinatra-mvc-skeleton/app/views/welcome.erb
@@ -1,2 +1,5 @@
-<p>Welcome to Excusify!</p>
-<a href="/excuses">View Excuses</a>
+<section class="container main">
+  <img src="/img/excuses_made_easy.png">
+  <h1><span>Introducing <em>Excusify</em> <br /> Excuse making just got easier</span></h1>
+  <a href="/excuses"><button type="button" class="btn btn-primary">View Excuses</button></a>
+</section>
