--- a/sinatra-mvc-skeleton/app/views/comments/index.erb
+++ b/sinatra-mvc-skeleton/app/views/comments/index.erb
@@ -1,30 +1,36 @@
-<section>
-  <h1>Excuse</h1>
+<section class="container">
+  <h1 class="text-center header">Excuse</h1>
   <article>
-    <p><%= @excuse.body %></p>
+    <ul class="excuse">
+      <li class="excuse-body"><%= @excuse.body %></li>
+    </ul>
   </article>
   <article>
-     <h2>Leave a Comment</h2>
+     <h2 class="text-center header">Leave a Comment</h2>
     <%= erb :"partials/_create_account_errors", locals: { errors: @errors } %>
-    <form method="post" action="/excuses/<%= @excuse.id %>/comments">
-      <textarea type="text" name="comment_body" placeholder="Comment"></textarea>
-      <br>
-      <input type="submit" value="Comment">
+    <form role="form" method="post" action="/excuses/<%= @excuse.id %>/comments">
+      <div class = "form-group">
+        <textarea  class = "form-control" rows = "3" type="text" name="comment_body" placeholder="Comment"></textarea>
+        <br>
+        <input class="button" type="submit" value="Comment">
+      </div>
     </form>
   </article>
   <article>
-    <h2>Comments</h2>
+    <h2 class="text-center header">Comments</h2>
     <%  @excuse.comments.each do |comment| %>
-      <p><%= comment.body %></p>
+      <ul class="excuse">
+        <li class="excuse-body"><%= comment.body %></li>
       <!-- horrible place to put this -->
-      <% user = comment.commenter_id %>
-      <% commenter = User.find(user) %>
-      <p><%= commenter.first_name %> <%= commenter.last_name %></p>
+        <% user = comment.commenter_id %>
+        <% commenter = User.find(user) %>
+        <li class="excuse-body name">Commenter: <%= commenter.first_name %> <%= commenter.last_name %></li>
+      </ul>
       <% if current_user.id  == comment.commenter_id %>
-        <a href="/excuses/<%= @excuse.id %>/comments/<%= comment.id %>/edit">Edit</a>
-        <form method="post" action="/excuses/<%= @excuse.id %>/comments/<%= comment.id %>">
+        <a href="/excuses/<%= @excuse.id %>/comments/<%= comment.id %>/edit"><button type="button" class="btn btn-primary">Edit</button></a>
+        <form class="delete-form" method="post" action="/excuses/<%= @excuse.id %>/comments/<%= comment.id %>">
           <input type="hidden" name="_method" value="delete">
-          <input type="submit" value="Delete">
+          <input class="button" type="submit" value="Delete">
         </form>
       <% end %>
     <% end %>
