--- a/sinatra-mvc-skeleton/app/views/excuses/show.erb
+++ b/sinatra-mvc-skeleton/app/views/excuses/show.erb
@@ -1,9 +1,12 @@
-<section>
-  <h1>Excuse</h1>
-  <p><%= @excuse.body %></p>
-    <a href="/excuses/<%= @excuse.id %>/edit">Edit</a>
-    <form method="post" action="/excuses/<%= @excuse.id %>">
+<section class="container">
+  <h1 class="text-center header">Excuse</h1>
+  <p class="excuse-body"><%= @excuse.body %></p>
+    <a href="/excuses/<%= @excuse.id %>/edit"><button type="button" class="btn btn-primary">Edit</button></a>
+    <audio controls>
+      <source src="<%= @excuse.audio_file %>" type="audio/mp3">
+    </audio>
+    <form class="delete-form delete-more" method="post" action="/excuses/<%= @excuse.id %>">
       <input type="hidden" name="_method" value="delete">
-      <input type="submit" value="Delete">
+      <input class="button" type="submit" value="Delete">
     </form>
 </section>
